fixed issue in app-panel widget with absent transition of unpinned footer/header on sidebar collapsing

--- a/src/stylus/layout/widgets/appPanel/index.styl
+++ b/src/stylus/layout/widgets/appPanel/index.styl
@@ -21,6 +21,9 @@
         display: flex;
         flex-direction: column;
         min-height: 100%;
+        transition:
+            margin-left $g_transition_delay,
+            margin-right $g_transition_delay;
 
 
     &__sidebar
